# bucketeer

./: .bazelrc  .gitignore  .golangci.yml  .hadolint.yaml  BUILD.bazel  BUILD.googleapis  CHANGELOG.md  CLA.md  CODEOWNERS  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile-app-api  MIGRATION.md  Makefile  README.md  WORKSPACE  foo  go.mod  go.sum  release-notes.md  release-please-config.json  remove.sh  renovate.json  repositories.bzl  watch_20251015-214530
cmd/account/: BUILD.bazel  account.go
cmd/auditlog/: BUILD.bazel  auditlog.go
cmd/auth/: BUILD.bazel  auth.go
cmd/autoops/: BUILD.bazel  autoops.go
cmd/environment/: BUILD.bazel  environment.go
cmd/experiment/: BUILD.bazel  experiment.go
cmd/feature/: BUILD.bazel  feature.go
cmd/gateway/: BUILD.bazel  gateway.go
cmd/goalbatch/: BUILD.bazel  goalbatch.go
cmd/metricsevent/: BUILD.bazel  metricsevent.go
cmd/migration/: BUILD.bazel  migration.go
cmd/notification/: BUILD.bazel  notification.go
cmd/opsevent/: BUILD.bazel  opsevent.go
cmd/push/: BUILD.bazel  push.go
hack/create-api-key/: BUILD.bazel  README.md  command.go  main.go
pkg/cache/: BUILD.bazel  cache.go  redis_cache.go  ttl_cache.go
pkg/cache/mock/: BUILD.bazel  cache.go
pkg/cache/testing/: BUILD.bazel  cache.go
pkg/cache/v2/: BUILD.bazel  redis_cache.go
pkg/cache/v3/: BUILD.bazel  autoops.go  dau.go  dau_test.go  environment_api_key.go  eventcounter.go  eventcounter_test.go  eviction.go  experiments.go  features.go  features_test.go  in_memory_cache.go  in_memory_cache_test.go  mau.go  mau_test.go  redis_cache.go  segment_users.go  segment_users_test.go  user.go  user_test.go
pkg/cache/v3/mock/: BUILD.bazel  autoops.go  dau.go  environment_api_key.go  eventcounter.go  experiments.go  features.go  mau.go  segment_users.go  user.go
pkg/cli/: BUILD.bazel  app.go  cmd.go
pkg/crypto/: BUILD.bazel  awskmscrypto.go  cloudkmscrypto.go  crypto.go  hashicorpvaultcrypto.go
pkg/druid/: BUILD.bazel  supervisor.go  supervisor_creator.go
pkg/druid/mock/: BUILD.bazel  supervisor_creator.go
pkg/errgroup/: BUILD.bazel  errgroup.go  errgroup_test.go
pkg/health/: BUILD.bazel  grpc_health.go  health.go  health_test.go  rest_health.go
pkg/job/: BUILD.bazel  job.go  metrics.go
pkg/kafka/: BUILD.bazel  topic.go  topic_creator.go
pkg/kafka/mock/: BUILD.bazel  topic_creator.go
pkg/locale/: BUILD.bazel  locale.go  locale_test.go  localizer.go  localizer_test.go  options.go
pkg/locale/localizedata/: en.yaml  ja.yaml
pkg/log/: BUILD.bazel  field.go  log.go  log_test.go
pkg/metrics/: BUILD.bazel  metrics.go  metrics_test.go
pkg/metrics/mock/: BUILD.bazel  metrics.go
pkg/pubsub/: BUILD.bazel  pubsub.go
pkg/pubsub/factory/: factory.go  token_source.go  token_source_test.go
pkg/pubsub/publisher/: BUILD.bazel  metrics.go  publisher.go
pkg/pubsub/publisher/mock/: BUILD.bazel  publisher.go
pkg/pubsub/puller/: BUILD.bazel  puller.go  rate_limited_puller.go
pkg/pubsub/puller/codes/: BUILD.bazel  code_string.go  codes.go
pkg/pubsub/puller/mock/: BUILD.bazel  puller.go  rate_limited_puller.go
pkg/pubsub/redis/: client.go  publisher.go  puller.go  stream_client.go  stream_publisher.go  stream_puller.go
pkg/pubsub/redis/mock/: publisher.go  puller.go
pkg/rest/: BUILD.bazel  error.go  handler.go  log.go  log_test.go  metrics.go  middleware.go  middleware_test.go  response.go  server.go  server_test.go
proto/: Makefile  (+4 more)
python/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python/src/cmd/calculator/: main.py
python/src/lib/calculator/domain/: experiment.py  experiment_result.py
python/src/lib/calculator/job/: calculate_experiments.py  metrics.py
python/src/lib/calculator/stats/: binomial.py  metrics.py  normal_inverse_gamma.py
python/src/lib/calculator/storage/: mysql_experiment_result.py
python/src/lib/environment/stub/: stub.py
python/src/lib/eventcounter/stub/: stub.py
python/src/lib/health/: health.py
python/src/lib/log/: formatter.py  logger.py
python/src/lib/metrics/: server.py
python/src/lib/rpc/: rpc.py
python/src/lib/schedule/: job.py  metrics.py  scheduler.py
python/src/lib/signal/: signal_handler.py
python/src/proto/account/: account_pb2.py  api_key_pb2.py  command_pb2.py  service_pb2.py  service_pb2_grpc.py
python/src/proto/auditlog/: auditlog_pb2.py  service_pb2.py  service_pb2_grpc.py
python/src/proto/auth/: service_pb2.py  service_pb2_grpc.py  token_pb2.py
python/src/proto/autoops/: auto_ops_rule_pb2.py  clause_pb2.py  command_pb2.py  ops_count_pb2.py  progressive_rollout_pb2.py  service_pb2.py  service_pb2_grpc.py  webhook_pb2.py
python/src/proto/environment/: command_pb2.py  environment_pb2.py  project_pb2.py  service_pb2.py  service_pb2_grpc.py
python/src/proto/eventcounter/: distribution_summary_pb2.py  evaluation_count_pb2.py  experiment_count_pb2.py  experiment_result_pb2.py  goal_result_pb2.py  histogram_pb2.py  service_pb2.py  service_pb2_grpc.py  timeseries_pb2.py  variation_count_pb2.py  variation_result_pb2.py
python/src/proto/eventpersisterdwh/: evaluation_event_pb2.py  goal_event_pb2.py
python/src/proto/experiment/: command_pb2.py  experiment_pb2.py  goal_pb2.py  service_pb2.py  service_pb2_grpc.py
python/src/proto/experimentcalculator/: service_pb2.py  service_pb2_grpc.py
python/src/proto/feature/: clause_pb2.py  command_pb2.py  evaluation_pb2.py  feature_last_used_info_pb2.py  feature_pb2.py  prerequisite_pb2.py  reason_pb2.py  rule_pb2.py  segment_pb2.py  service_pb2.py  service_pb2_grpc.py  strategy_pb2.py  target_pb2.py  variation_pb2.py
python/src/proto/gateway/: service_pb2.py  service_pb2_grpc.py
python/src/proto/migration/: mysql_service_pb2.py  mysql_service_pb2_grpc.py
python/src/proto/notification/: command_pb2.py  recipient_pb2.py  service_pb2.py  service_pb2_grpc.py  subscription_pb2.py
python/src/proto/push/: command_pb2.py  push_pb2.py  service_pb2.py  service_pb2_grpc.py
python/src/proto/test/: service_pb2.py  service_pb2_grpc.py
python/src/proto/user/: user_pb2.py
(+5558 files in other folders)
