load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["account.go"],
    importpath = "github.com/bucketeer-io/bucketeer/cmd/account",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/account/cmd/apikeycacher:go_default_library",
        "//pkg/account/cmd/server:go_default_library",
        "//pkg/cli:go_default_library",
    ],
)

go_binary(
    name = "account",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "account_image",
    binary = ":account",
)

alias(
    name = "account_image_tar",
    actual = ":account_image.tar",
)
