load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["auth.go"],
    importpath = "github.com/bucketeer-io/bucketeer/cmd/auth",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/auth/cmd/server:go_default_library",
        "//pkg/cli:go_default_library",
    ],
)

go_binary(
    name = "auth",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "auth_image",
    binary = ":auth",
)

alias(
    name = "auth_image_tar",
    actual = ":auth_image.tar",
)
