load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["autoops.go"],
    importpath = "github.com/bucketeer-io/bucketeer/cmd/autoops",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/autoops/cmd/server:go_default_library",
        "//pkg/cli:go_default_library",
        "//pkg/ldflags:go_default_library",
    ],
)

go_binary(
    name = "autoops",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = {
        "github.com/bucketeer-io/bucketeer/pkg/ldflags.Hash": "{HASH}",
        "github.com/bucketeer-io/bucketeer/pkg/ldflags.BuildDate": "{BUILDDATE}",
    },
)

go_image(
    name = "autoops_image",
    binary = ":autoops",
)

alias(
    name = "autoops_image_tar",
    actual = ":autoops_image.tar",
)
