load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["environment.go"],
    importpath = "github.com/bucketeer-io/bucketeer/cmd/environment",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cli:go_default_library",
        "//pkg/environment/cmd/server:go_default_library",
    ],
)

go_binary(
    name = "environment",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "environment_image",
    binary = ":environment",
)

alias(
    name = "environment_image_tar",
    actual = ":environment_image.tar",
)
