load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["gateway.go"],
    importpath = "github.com/bucketeer-io/bucketeer/cmd/gateway",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cli:go_default_library",
        "//pkg/gateway/cmd:go_default_library",
    ],
)

go_binary(
    name = "gateway",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "gateway_image",
    binary = ":gateway",
)

alias(
    name = "gateway_image_tar",
    actual = ":gateway_image.tar",
)
