load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["goalbatch.go"],
    importpath = "github.com/bucketeer-io/bucketeer/cmd/goalbatch",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cli:go_default_library",
        "//pkg/goalbatch/cmd/transformer:go_default_library",
    ],
)

go_binary(
    name = "goalbatch",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "goalbatch_image",
    binary = ":goalbatch",
)

alias(
    name = "goalbatch_image_tar",
    actual = ":goalbatch_image.tar",
)
