load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["metricsevent.go"],
    importpath = "github.com/bucketeer-io/bucketeer/cmd/metricsevent",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cli:go_default_library",
        "//pkg/ldflags:go_default_library",
        "//pkg/metricsevent/cmd/persister:go_default_library",
    ],
)

go_binary(
    name = "metricsevent",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = {
        "github.com/bucketeer-io/bucketeer/pkg/ldflags.Hash": "{HASH}",
        "github.com/bucketeer-io/bucketeer/pkg/ldflags.BuildDate": "{BUILDDATE}",
    },
)

go_image(
    name = "metricsevent_image",
    binary = ":metricsevent",
)

alias(
    name = "metricsevent_image_tar",
    actual = ":metricsevent_image.tar",
)
