load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["notification.go"],
    importpath = "github.com/bucketeer-io/bucketeer/cmd/notification",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cli:go_default_library",
        "//pkg/ldflags:go_default_library",
        "//pkg/notification/cmd/sender:go_default_library",
        "//pkg/notification/cmd/server:go_default_library",
    ],
)

go_binary(
    name = "notification",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "notification_image",
    binary = ":notification",
)

alias(
    name = "notification_image_tar",
    actual = ":notification_image.tar",
)
