load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["opsevent.go"],
    importpath = "github.com/bucketeer-io/bucketeer/cmd/opsevent",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cli:go_default_library",
        "//pkg/ldflags:go_default_library",
        "//pkg/opsevent/cmd/batch:go_default_library",
    ],
)

go_binary(
    name = "opsevent",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = {
        "github.com/bucketeer-io/bucketeer/pkg/ldflags.Hash": "{HASH}",
        "github.com/bucketeer-io/bucketeer/pkg/ldflags.BuildDate": "{BUILDDATE}",
    },
)

go_image(
    name = "opsevent_image",
    binary = ":opsevent",
)

alias(
    name = "opsevent_image_tar",
    actual = ":opsevent_image.tar",
)
