load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["push.go"],
    importpath = "github.com/bucketeer-io/bucketeer/cmd/push",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cli:go_default_library",
        "//pkg/ldflags:go_default_library",
        "//pkg/push/cmd/sender:go_default_library",
        "//pkg/push/cmd/server:go_default_library",
    ],
)

go_binary(
    name = "push",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "push_image",
    binary = ":push",
)

alias(
    name = "push_image_tar",
    actual = ":push_image.tar",
)
