load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "command.go",
        "main.go",
    ],
    importpath = "github.com/bucketeer-io/bucketeer/hack/create-api-key",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/account/client:go_default_library",
        "//pkg/cli:go_default_library",
        "//pkg/metrics:go_default_library",
        "//pkg/rpc/client:go_default_library",
        "//proto/account:go_default_library",
        "@in_gopkg_alecthomas_kingpin_v2//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "create-api-key",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)
