load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cache.go",
        "redis_cache.go",
        "ttl_cache.go",
    ],
    importpath = "github.com/bucketeer-io/bucketeer/pkg/cache",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/redis:go_default_library",
        "//pkg/storage:go_default_library",
    ],
)
