load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["errgroup.go"],
    importpath = "github.com/bucketeer-io/bucketeer/pkg/errgroup",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_sync//errgroup:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["errgroup_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
