load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "job.go",
        "metrics.go",
    ],
    importpath = "github.com/bucketeer-io/bucketeer/pkg/job",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/metrics:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_robfig_cron//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
