load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "topic.go",
        "topic_creator.go",
    ],
    importpath = "github.com/bucketeer-io/bucketeer/pkg/kafka",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/storage/kafka:go_default_library",
        "@com_github_shopify_sarama//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
