load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "locale.go",
        "localizer.go",
        "options.go",
    ],
    embedsrcs = glob(["localizedata/*.yaml"]),
    importpath = "github.com/bucketeer-io/bucketeer/pkg/locale",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_nicksnyder_go_i18n_v2//i18n:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_golang_x_text//language:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["localizer_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
