load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "field.go",
        "log.go",
    ],
    importpath = "github.com/bucketeer-io/bucketeer/pkg/log",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/rpc/metadata:go_default_library",
        "@io_opencensus_go//trace:go_default_library",
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zapcore:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["log_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
