load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["metrics.go"],
    importpath = "github.com/bucketeer-io/bucketeer/pkg/metrics",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/health:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["metrics_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/health:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
