load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["pubsub.go"],
    importpath = "github.com/bucketeer-io/bucketeer/pkg/pubsub",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/backoff:go_default_library",
        "//pkg/metrics:go_default_library",
        "//pkg/pubsub/publisher:go_default_library",
        "//pkg/pubsub/puller:go_default_library",
        "@com_google_cloud_go_pubsub//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
