load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "error.go",
        "handler.go",
        "log.go",
        "metrics.go",
        "middleware.go",
        "response.go",
        "server.go",
    ],
    importpath = "github.com/bucketeer-io/bucketeer/pkg/rest",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log:go_default_library",
        "//pkg/metrics:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zapcore:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "log_test.go",
        "middleware_test.go",
        "server_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
